# python-terraform-bridge

./: AGENTS.md  CHANGELOG.md  index.html  pyproject.toml
.cursor/: Dockerfile
.cursor/rules/: 00-development.mdc
memory-bank/: activeContext.md
src/python_terraform_bridge/: __init__.py  __main__.py  cli.py  module_resources.py  parameter.py  registry.py  runtime.py
tests/: __init__.py  test_module_resources.py  test_parameter.py  test_registry.py  test_runtime.py
