[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-terraform-bridge"
version = "1.2.0"
description = "Bridge Python classes to Terraform external data sources and modules"
authors = [
    { name = "Jon Bogaty", email = "jon@jonbogaty.com" }
]
maintainers = [
    { name = "Jon Bogaty", email = "jon@jonbogaty.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
keywords = [
    "terraform",
    "infrastructure",
    "iac",
    "code-generation",
    "external-data",
    "bridge",
]
dependencies = [
    "directed-inputs-class>=202511.3.0",
    "extended-data-types>=202511.9.0",
    "lifecyclelogging>=202511.3.0",
    "tssplit>=0.1.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
dev = [
    "python-terraform-bridge[test]",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/jbcom/jbcom-control-center"
Repository = "https://github.com/jbcom/jbcom-control-center"
Documentation = "https://github.com/jbcom/jbcom-control-center/tree/main/packages/python-terraform-bridge"

[project.scripts]
terraform-bridge = "python_terraform_bridge.cli:main"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/python_terraform_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.semantic_release]
build_command = "pip install uv && uv build"
commit_parser = "../../scripts/psr/monorepo_parser.py:ConventionalCommitMonorepoParser"
commit_message = """
chore(ptb-release): release python-terraform-bridge v{version} [skip ci]

Automatically generated by python-semantic-release
"""
allow_zero_version = true
tag_format = "python-terraform-bridge-v{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/python_terraform_bridge/__init__.py:__version__"]

[tool.semantic_release.publish]
dist_glob_patterns = ["../../dist/python_terraform_bridge-*"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.beta]
match = "beta"
prerelease = true
prerelease_token = "beta"

[tool.semantic_release.commit_parser_options]
path_filters = ["packages/python-terraform-bridge/*"]
scope_prefix = "ptb"
